updating the display